[package]
name = "ogm"
version = "0.1.0"
authors = ["drakobian <drake.bennion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bolt-client = { version = "0.9.1", features = ["tokio-stream"] }
tokio = "1.5.0"
tokio-util = { version = "0.6.6", features = ["compat"] }
field_types = "*"
typename = "0.1.2"
