[package]
name = "runner"
version = "0.1.0"
authors = ["drakobian <drake.bennion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ogm = { path = "../ogm" }
tokio = { version = "1.5.0", features=["full"] }
dotenv = "0.15.0"